fixed flicker and added docs blog

--- a/styles.css
+++ b/styles.css
@@ -490,3 +490,18 @@ html {
       list-style-position: center;
     }
   }
+
+  #page-fade {
+  position: fixed;
+  z-index: 2000;
+  inset: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 1;
+  pointer-events: none;
+  transition: opacity 1.5s ease;
+}
+
+#page-fade.fade-out {
+  opacity: 0;
+}
